--- a/hw9/additional/additional.html
+++ b/hw9/additional/additional.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Additional hw9</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<script src="additional.js"></script>
+<script src="./additional.js"></script>
 </body>
 </html>
