added cw in progress

--- a/cw2/js1/index.html
+++ b/cw2/js1/index.html
@@ -23,9 +23,9 @@
         <div class="list-wrap">
             <div id="listContainer"></div>
             <div class="btns-wrap">
-                <button >Sort by Name</button>
-                <button>Sort by Value</button>
-                <button>Delete</button>
+                <button id="sortByNameBtn">Sort by Name</button>
+                <button id="sortByValueBtn">Sort by Value</button>
+                <button id="delBtn">Delete</button>
             </div>
         </div>
     </div>
